--- a/index.html
+++ b/index.html
@@ -66,12 +66,14 @@
             <div class="home__data">
                 <!-- <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Marlon</span><br> Web Designer</h1> -->
                 <h1 class="title">Hai <span class="wave-hand">👋</span>, saya <br><span class="name">Mohamad Randy <br>
-                        Wiguna</span><br><span class="info">Seorang</span> <span class="auto-type"></span> <br><span
-                        class="info">Welcome to my
-                        <span class="portofolio-text">Portofolio page</span></span></h1>
+                        Wiguna</span><br><span class="info">Seorang</span> <span class="auto-type"></span></h1>
+                <h1 class="info">Welcome to my
+                    <span class="portofolio-text">Portofolio page</span>
+                </h1>
                 <br>
 
-                <a href="pdf/Copy of Template CV Siswa PKL TP 20242025.pdf" download class="button">Download CV <i class='bx bxs-download'></i></a>
+                <a href="pdf/Copy of Template CV Siswa PKL TP 20242025.pdf" download class="button">Download CV <i
+                        class='bx bxs-download'></i></a>
             </div>
 
             <div class="home__social">
@@ -116,25 +118,25 @@
             </div>
         </section>
 
-       <!--===== SKILLS =====-->
-<section class="skills section" id="skills">
-    <h2 class="section-title">Skills</h2>
+        <!--===== SKILLS =====-->
+        <section class="skills section" id="skills">
+            <h2 class="section-title">Skills</h2>
 
-    <div class="skills__container bd-grid">
-        <div class="skills__box">
-            <i class='bx bxl-html5 skills__icon'></i>
-        </div>
-        <div class="skills__box">
-            <i class='bx bxl-css3 skills__icon'></i>
-        </div>
-        <div class="skills__box">
-            <i class='bx bxl-javascript skills__icon'></i>
-        </div>
-        <div class="skills__box">
-            <i class='bx bxs-paint skills__icon'></i>
-        </div>
-    </div>
-</section>
+            <div class="skills__container bd-grid">
+                <div class="skills__box">
+                    <i class='bx bxl-html5 skills__icon'></i>
+                </div>
+                <div class="skills__box">
+                    <i class='bx bxl-css3 skills__icon'></i>
+                </div>
+                <div class="skills__box">
+                    <i class='bx bxl-javascript skills__icon'></i>
+                </div>
+                <div class="skills__box">
+                    <i class='bx bxs-paint skills__icon'></i>
+                </div>
+            </div>
+        </section>
 
 
         <!--===== WORK =====-->
@@ -143,24 +145,24 @@
 
             <div class="porto__container bd-grid">
                 <div class="bd-grid">
-                <a href="" class="porto__img">
-                    <img src="https://picsum.photos/seed/picsum/350/233" alt="">
-                </a>
+                    <a href="" class="porto__img">
+                        <img src="https://picsum.photos/seed/picsum/350/233" alt="">
+                    </a>
                 </div>
                 <div class="bd-grid">
-                <a href="" class="porto__img">
-                    <img src="https://picsum.photos/seed/picsum/350/233" alt="">
-                </a>
+                    <a href="" class="porto__img">
+                        <img src="https://picsum.photos/seed/picsum/350/233" alt="">
+                    </a>
                 </div>
                 <div class="bd-grid">
-                <a href="" class="porto__img">
-                    <img src="https://picsum.photos/seed/picsum/350/233" alt="">
-                </a>
+                    <a href="" class="porto__img">
+                        <img src="https://picsum.photos/seed/picsum/350/233" alt="">
+                    </a>
                 </div>
                 <div class="bd-grid">
-                <a href="" class="porto__img">
-                    <img src="https://picsum.photos/seed/picsum/350/233" alt="">
-                </a>
+                    <a href="" class="porto__img">
+                        <img src="https://picsum.photos/seed/picsum/350/233" alt="">
+                    </a>
                 </div>
             </div>
         </section>
