--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="home__social">
                 <a href="https://instagram.com/mrndyww" class="home__social-icon"><i class='bx bxl-instagram'></i></a>
                 <a href="" class="home__social-icon"><i class='bx bxl-facebook'></i></a>
-                <a href="" class="home__social-icon"><i class='bx bxl-github'></i></a>
+                <a href="https://github.com/mrndyw" class="home__social-icon"><i class='bx bxl-github'></i></a>
             </div>
 
             <div class="home__img">
@@ -188,7 +188,7 @@
         <div class="footer__social">
             <a href="https://instagram.com/mrndyww" class="footer__icon"><i class='bx bxl-instagram'></i></a>
             <a href="#" class="footer__icon"><i class='bx bxl-facebook'></i></a>
-            <a href="#" class="footer__icon"><i class='bx bxl-github'></i></a>
+            <a href="https://github.com/mrndyw" class="footer__icon"><i class='bx bxl-github'></i></a>
         </div>
         <p class="footer__copy">&#169; 2024 Mohamad, Inc</p>
     </footer>
