--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@
                 </h1>
                 <br>
 
-                <a href="pdf/Copy of Template CV Siswa PKL TP 20242025.pdf" download class="button">Download CV <i
-                        class='bx bxs-download'></i></a>
+                <a href="pdf/CV.pdf" download class="button">Download CV <i class='bx bxs-download'></i></a>
             </div>
 
             <div class="home__social">
@@ -111,9 +110,12 @@
                 </div>
                 <div>
                     <h2 class="about__subtitle">I'am <br> Mohamad Randy Wiguna</h2>
-                    <p class="about__text">Saya seorang Frontend Developer dan UI/UX Designer.
-                        Saya bersekolah di SMK Negeri 4 Bandung, di sana lah saya mempelajari membuat website.
-                        Dan inilah website yang saya buat selama saya belajar di SMK Negeri 4 Bandung.</p>
+                    <p class="about__text">Saya seorang web developer dari Bandung, Jawa Barat.
+                        Saya memiliki 1 tahun pengalaman dalam ui/ux designer dan front-end web development. Saya sangat
+                        menikmati apa yang saya lakukan saat ini. <br><br>
+                        Selain membuat website, saya juga aktif dalam berbagai aktivitas seperti bulutangkis dan lari,
+                        saya senang berolahraga karena dapat menjaga kesehatan fisik saya.
+                    </p>
                 </div>
             </div>
         </section>
@@ -135,6 +137,15 @@
                 <div class="skills__box">
                     <i class='bx bxs-paint skills__icon'></i>
                 </div>
+                <div class="skills__box">
+                    <i class='bx bxl-figma skills__icon'></i>
+                </div>
+                <div class="skills__box">
+                    <i class='bx bxl-nodejs skills__icon'></i>
+                </div>
+                <div class="skills__box">
+                    <i class='bx bxl-vuejs skills__icon'></i>
+                </div>
             </div>
         </section>
 
@@ -142,30 +153,43 @@
         <!--===== WORK =====-->
         <section class="porto section" id="porto">
             <h2 class="section-title">Portofolio</h2>
-
             <div class="porto__container bd-grid">
-                <div class="bd-grid">
-                    <a href="" class="porto__img">
-                        <img src="https://picsum.photos/seed/picsum/350/233" alt="">
-                    </a>
+                <div class="card">
+                    <img class="porto__img" src="./assets/img/image.png" alt="Portofolio Image">
+                    <div class="card-body">
+                        <h3 class="card-title">Personal Website</h3>
+                        <p class="card-text">
+                            My personal website, I created this website to display my profile, skills and projects. As
+                            well as my place to try new technology.</p>
+                    </div>
+                    <div class="overlay">
+                        <div class="overlay-content">
+                            <a href="https://porto-rann.vercel.app/" class="overlay-icon"><i
+                                    class='bx bx-link-alt'></i></a>
+                        </div>
+                        <div class="overlay-content">
+                            <a href="https://github.com/mrndyw/porto" class="overlay-icon"><i
+                                    class='bx bxl-github'></i></a>
+                        </div>
+                    </div>
                 </div>
-                <div class="bd-grid">
-                    <a href="" class="porto__img">
-                        <img src="https://picsum.photos/seed/picsum/350/233" alt="">
-                    </a>
+                <div class="card">
+                    <img class="porto__img" src="./assets/img/keraton-web.png" alt="Portofolio Image">
+                    <div class="card-body">
+                        <h3 class="card-title">Keraton Kasepuhan Cirebon</h3>
+                        <p class="card-text">
+                            A website created to tell the history of the palace, and booking tour tickets. Here I work
+                            as a team and work on the front-end.</p>
+                    </div>
+                    <div class="overlay">
+                        <div class="overlay-content">
+                            <a href="https://github.com/alifagian/keraton" class="overlay-icon"><i
+                                    class='bx bxl-github'></i></a>
+                        </div>
+                    </div>
                 </div>
-                <div class="bd-grid">
-                    <a href="" class="porto__img">
-                        <img src="https://picsum.photos/seed/picsum/350/233" alt="">
-                    </a>
-                </div>
-                <div class="bd-grid">
-                    <a href="" class="porto__img">
-                        <img src="https://picsum.photos/seed/picsum/350/233" alt="">
-                    </a>
-                </div>
-            </div>
         </section>
+
 
         <!--===== CONTACT =====-->
         <section class="contact section" id="contact">
