--- a/index.html
+++ b/index.html
@@ -32,22 +32,22 @@
                     <li class="nav__item"><a href="#porto" class="nav__link">Portofolio</a></li>
                     <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
                     <li class="nav__item">
-                        <div class="theme"><i class='bx bx-moon'></i></div>
+                        <div class="theme"><i class='bx bx-moon nav__link'></i></div>
                     </li>
                     <li class="nav__item">
                         <div class="theme-color" id="theme-color"><i class='bx bxs-paint'></i></div>
                         <ul class="dropdown" id="theme-dropdown">
                             <li>
-                                <div class="color-1"></div>
+                                <div class="color-1 nav__link"></div>
                             </li>
                             <li>
-                                <div class="color-2"></div>
+                                <div class="color-2 nav__link"></div>
                             </li>
                             <li>
-                                <div class="color-3"></div>
+                                <div class="color-3 nav__link"></div>
                             </li>
                             <li>
-                                <div class="color-4"></div>
+                                <div class="color-4 nav__link"></div>
                             </li>
                         </ul>
                     </li>
